tools: Disable IPv6 lookup for static reverse proxy backends
Configure nginx to only perform IPv4 lookups when resolving upstream
servers.

Change-Id: If2e5b5e8cd9413462b3d8c9e36e95524a63ad1e3

--- a/modules/toollabs/templates/static-server.conf.erb
+++ b/modules/toollabs/templates/static-server.conf.erb
@@ -13,7 +13,7 @@
 #limitations under the License.
 
 server {
-    resolver <%= @resolver %>;
+    resolver <%= @resolver %> ipv6=off;
 
     listen 80;
 
