sshd: allow to tune MaxSessions and MaxStartups
* The Cloud VPS installation of Cumin connects through a bastion and
  requires some tuning of those parameters to improve parallelism.
* I've set them in Horizon in the bastion-restricted prefix puppet
  configuration of the bastion project to:
      profile::base::ssh_server_settings:
        max_sessions: 35
        max_startups: 35:30:60

Bug: T176609
Change-Id: Ic38c67c1fa2f5f352e26576c19303308e8450351

--- a/modules/profile/templates/openstack/main/cumin/config.yaml.erb
+++ b/modules/profile/templates/openstack/main/cumin/config.yaml.erb
@@ -8,6 +8,7 @@ environment:
 clustershell:
     ssh_options:
         - '-F <%= @ssh_config_path %>'
+    fanout: 30  # Must be lower than MaxSessions and MaxStartups in sshd_config, see hiera profile::base::ssh_server_settings
 
 openstack:
     auth_url: <%= @keystone_protocol %>://<%= @keystone_host %>:<%= @keystone_port %>
