Specify keyholder_key in global scap.cfg
Global scap.cfg is anyway tailored to deploying mediawiki as witnessed by
the rest of the parameters in it. Specify the keyholder_key as well and
set it to the mediawiki deploy key

Bug: T172333
Change-Id: I4dbe72404472e06b43856dc7c3a985f88273995d

--- a/modules/scap/templates/scap.cfg.erb
+++ b/modules/scap/templates/scap.cfg.erb
@@ -34,6 +34,7 @@ datacenter: eqiad
 ssh_auth_sock: /run/keyholder/proxy.sock
 # User to perform ssh commands as
 ssh_user: mwdeploy
+keyholder_key: mwdeploy
 
 # PID file for HHVM fcgi service
 hhvm_pid_file: /run/hhvm/hhvm.pid
