--- a/modules/pybal/templates/pybal.conf.erb
+++ b/modules/pybal/templates/pybal.conf.erb
@@ -12,6 +12,9 @@ instrumentation = <%= @global_options.fetch('instrumentation', 'yes') %>
 <% if @global_options.fetch('instrumentation_ips', nil) -%>
 instrumentation_ips = <%= @global_options.fetch('instrumentation_ips') %>
 <% end -%>
+<% if @global_options.fetch('bgp-local-ips', nil) -%>
+bgp-local-ips = <%= @global_options.fetch('bgp-local-ips') %>
+<% end -%>
 
 <% if @global_options.fetch('dry-run', nil) %>dry-run = <%= @global_options.fetch('dry-run', 'no') %><% end %>
 #
