--- a/modules/profile/templates/openstack/main/cumin/aliases.yaml.erb
+++ b/modules/profile/templates/openstack/main/cumin/aliases.yaml.erb
@@ -1,3 +1,3 @@
 # Cumin aliases, in the form:
 # key: query_using_the_global_grammar
-all: O{*}
+all: O{*} and not O{project:contintcloud} and not O{project:admin-monitoring}
