Move dataset nfs server manifests to dump module
We now use one class for any nfs service, with different profiles
depending on whether the filesystem is exported to the snapshot hosts,
stats hosts, or all of them. Local path of filesystem is now hardcoded
in the profile; it could turn into a hiera value later.

Bug: T175528
Change-Id: Ia2d61583134863679cc723266fe9cf86b0988c59

--- a/modules/dumps/templates/nfs/default-nfs-common.erb
+++ b/modules/dumps/templates/nfs/default-nfs-common.erb
@@ -1,7 +1,7 @@
 ##################################
 #  THIS FILE IS MANAGED BY PUPPET
 #
-#  Source: dumps/templates/generation/default-nfs-common.erb
+#  Source: dumps/templates/nfs/default-nfs-common.erb
 ##################################
 
 # If you do not set values for the NEED_ options, they will be attempted
@@ -16,7 +16,7 @@ NEED_STATD=
 #   when you have a port-based firewall. To use a fixed port, set this
 #   this variable to a statd argument like: "--port 4000 --outgoing-port 4001".
 #   For more information, see rpc.statd(8) or http://wiki.debian.org/SecuringNFS
-STATDOPTS="--port <%= scope.lookupvar('::dumps::generation::server::nfs::statd_port') -%> --outgoing-port <%= scope.lookupvar('::dumps::generation::server::nfs::statd_out') -%>"
+STATDOPTS="--port <%= scope.lookupvar('::dumps::nfs::statd_port') -%> --outgoing-port <%= scope.lookupvar('::dumps::nfs::statd_out') -%>"
 
 # Do you want to start the gssd daemon? It is required for Kerberos mounts.
 NEED_GSSD=
