Thumbor: fix logstash message type
It needs to match the type defined in the logstash
input configuration.

Bug: T150734
Change-Id: Icf537f0c2e4da15fd9e945361fa83fbf7be47fc0

--- a/modules/thumbor/templates/server.conf.erb
+++ b/modules/thumbor/templates/server.conf.erb
@@ -257,7 +257,7 @@ THUMBOR_LOG_CONFIG = {
             'host': '<%= @logstash_host %>',
             'port': <%= @logstash_port %>,
             'version': 1,
-            'message_type': 'thumbor',
+            'message_type': 'logback',
             'fqdn': False,
             'tags': ['thumbor'],
             'filters': ['context', '404exclude']
