cumin (WMCS): allow to setup cumin in a project
* Refactor Cumin's resources for WMCS Cloud VPS to allow to set up a
  Cumin master also inside an OpenStack project, without access to
  per-project secrets, and without requiring a standalone puppetmaster
  inside the project. Everything can be set in hiera in Horizon.
* Keyholder: accept a new optional parameter with an absolute path to a
  local SSH private key, to be used when it cannot be stored in secret()

Bug: T176314
Change-Id: I045984c1b87ae4f5a111d0de9f92b498da700275

--- a/modules/profile/templates/openstack/main/cumin/aliases.yaml.erb
+++ b/modules/profile/templates/openstack/main/cumin/aliases.yaml.erb
@@ -1,3 +1,5 @@
 # Cumin aliases, in the form:
 # key: query_using_the_global_grammar
-all: O{*} and not O{project:contintcloud} and not O{project:admin-monitoring}
+<% @aliases.each do |key, value| -%>
+<%= key %>: <%= value %>
+<% end -%>
