--- a/modules/profile/templates/openstack/main/cumin/config.yaml.erb
+++ b/modules/profile/templates/openstack/main/cumin/config.yaml.erb
@@ -8,7 +8,11 @@ environment:
 clustershell:
     ssh_options:
         - '-F <%= @ssh_config_path %>'
-    fanout: 30  # Must be lower than MaxSessions and MaxStartups in sshd_config, see hiera profile::base::ssh_server_settings
+    <%- if ! @is_project -%>
+    # If passing through a proxy must be lower than MaxSessions and MaxStartups
+    # in sshd_config, see hiera profile::base::ssh_server_settings
+    fanout: 15
+    <%- end -%>
 
 openstack:
     auth_url: <%= @keystone_protocol %>://<%= @keystone_host %>:<%= @keystone_port %>
@@ -17,3 +21,7 @@ openstack:
     domain_suffix: <%= @nova_dhcp_domain %>
     nova_api_version: 2.12
     timeout: 2
+    <%- if @labsproject -%>
+    query_params:
+        project: <%= @labsproject %>
+    <%- end -%>
