cumin (WMCS): allow to setup cumin in a project
* Refactor Cumin's resources for WMCS Cloud VPS to allow to set up a
  Cumin master also inside an OpenStack project, without access to
  per-project secrets, and without requiring a standalone puppetmaster
  inside the project. Everything can be set in hiera in Horizon.
* Keyholder: accept a new optional parameter with an absolute path to a
  local SSH private key, to be used when it cannot be stored in secret()

Bug: T176314
Change-Id: I045984c1b87ae4f5a111d0de9f92b498da700275

--- a/modules/profile/templates/openstack/main/cumin/config.yaml.erb
+++ b/modules/profile/templates/openstack/main/cumin/config.yaml.erb
@@ -17,3 +17,7 @@ openstack:
     domain_suffix: <%= @nova_dhcp_domain %>
     nova_api_version: 2.12
     timeout: 2
+    <%- if @labsproject -%>
+    query_params:
+        project: <%= @labsproject %>
+    <%- end -%>
