Thumbor: apply expensive type throttle to STL
Bug: T166699
Change-Id: I65629a5dfe474a7f81a72cb379bdefa5077340b5

--- a/modules/thumbor/templates/server.conf.erb
+++ b/modules/thumbor/templates/server.conf.erb
@@ -175,7 +175,7 @@ POOLCOUNTER_CONFIG_EXPENSIVE = {
     'workers': 16,
     'maxqueue': 100,
     'timeout': 8,
-    'extensions': ['xcf', 'djvu', 'pdf', 'tiff']
+    'extensions': ['xcf', 'djvu', 'pdf', 'tiff', 'stl']
 }
 
 # Thumbnails that fail for a given xkey more than 4 times per hour aren't
