MX: Change zen.spamhaus.org DNSBL action from warn to drop
Fix missing = sign

Bug: T175879
Change-Id: I5508d47f8bed09d90164c4b73153ba67a68ca57c

--- a/modules/role/templates/exim/exim4.conf.mx.erb
+++ b/modules/role/templates/exim/exim4.conf.mx.erb
@@ -159,7 +159,7 @@ acl_check_rcpt:
 	# Drop connections from IP addresses listed in DNSBL
 	drop log_message = $sender_host_address is listed by $dnslist_domain ($dnslist_value: $dnslist_text)
 		dnslists = zen.spamhaus.org
-		delay 15s
+		delay = 15s
 
 	accept
 
