MX: Change DNSBL error message
Add details to blocklist error displayed during SMTP session

Bug: T175879
Change-Id: Ifcd76576ebb7faa17ed4f95004fffd62a70f8ee3

--- a/modules/role/templates/exim/exim4.conf.mx.erb
+++ b/modules/role/templates/exim/exim4.conf.mx.erb
@@ -157,7 +157,7 @@ acl_check_rcpt:
 	require verify = sender
 
 	# Drop connections from IP addresses listed in DNSBL
-	drop log_message = $sender_host_address is listed by $dnslist_domain ($dnslist_value: $dnslist_text)
+	drop message = refusing mail from $sender_host_address - address is blocklisted by $dnslist_domain ($dnslist_value: $dnslist_text)
 		dnslists = zen.spamhaus.org
 		delay = 15s
 
