Gerrit: replication should be a forced push
Change-Id: Icc0752e6fd04e31f27c99abdeedc6325bf5fe7ef

--- a/modules/gerrit/templates/replication.config.erb
+++ b/modules/gerrit/templates/replication.config.erb
@@ -4,6 +4,7 @@
 [gerrit]
   replicateOnStartup = false
   autoReload = true
+  defaultForceUpdate = true
 <%
 # replication is a hash which maps remote "names" to their URLs
 # and other settings.
