Rancid: Add scs-ulsfo
Bug: T175876
Change-Id: I1616a9f44ee533460e81afe5d9dd5d7c9027d372

--- a/modules/rancid/templates/cloginrc.erb
+++ b/modules/rancid/templates/cloginrc.erb
@@ -1,2 +1,6 @@
 add method * {ssh}
 add password * {bogus_password}
+
+# OpenGear specific configuration
+add noenable scs*wmnet {1}
+add cyphertype scs*wmnet {aes256-ctr}
