Update Parsoid rttest linter config
Change-Id: I2d808dd87013125a7e0c665dd0ded87b7fb6d276

--- a/modules/testreduce/templates/parsoid-rt-client.rttest.localsettings.js.erb
+++ b/modules/testreduce/templates/parsoid-rt-client.rttest.localsettings.js.erb
@@ -26,10 +26,12 @@ exports.setup = function(parsoidConfig) {
 
 	// Enabled the linting code
 	parsoidConfig.linting = true;
-	// at a low sampling rate
-	parsoidConfig.linterAPISampling = 1000;  // 0.1%
-	// and send it to logs
-	parsoidConfig.linterSendAPI = false;
+	parsoidConfig.linter = {
+		// at a low sampling rate
+		apiSampling: 1000,  // 0.1%
+		// and send it to logs
+		sendAPI: false,
+	};
 
 	// Set rtTestMode to true for round-trip testing
 	parsoidConfig.rtTestMode = true;
