errorpage: Set explicit height on logo image
This prevents the browser from having to do a reflow for the text
around the image after it loads the image.

Change-Id: I81db36b4ed1cdb40be4b46dc0aa8d0ed78f6e223

--- a/modules/mediawiki/templates/errorpage.html.erb
+++ b/modules/mediawiki/templates/errorpage.html.erb
@@ -28,7 +28,7 @@ code { font-family: sans-serif; }
 </style>
 <div class="content" role="main">
 <% if @errorpage['logo_link'] && @errorpage['logo_link'] != :undef -%>
-<a href="<%= @errorpage['logo_link'] %>"><% end %><img src="<%= @errorpage['logo_src'] %>" srcset="<%= @errorpage['logo_srcset'] %>" alt="<%= @errorpage['logo_alt'] %>" width="135">
+<a href="<%= @errorpage['logo_link'] %>"><% end %><img src="<%= @errorpage['logo_src'] %>" srcset="<%= @errorpage['logo_srcset'] %>" alt="<%= @errorpage['logo_alt'] %>" width="<%= @errorpage['logo_width'] %>"<% if @errorpage['logo_height'] && @errorpage['logo_height'] != :undef %> height="<%= @errorpage['logo_height'] %>"<% end %>>
 <% if @errorpage['logo_link'] && @errorpage['logo_link'] != :undef -%>
 </a>
 <% end -%>
