--- a/modules/releases/templates/apache.conf.erb
+++ b/modules/releases/templates/apache.conf.erb
@@ -26,6 +26,7 @@
     ProxyVia Off
     ProxyPreserveHost On
     ProxyPass /ci/ http://127.0.0.1:8080/ci/ retry=0 nocanon
+    ProxyPassReverse /ci http://localhost:8080/ci
 
     ErrorLog /var/log/apache2/<%= @sitename %>.error.log
 
