--- a/modules/labs_dns/templates/pdns.conf.erb
+++ b/modules/labs_dns/templates/pdns.conf.erb
@@ -12,8 +12,9 @@
 local-address=<%= @dns_auth_ipaddress %>
 query-local-address=<% if has_variable?("dns_auth_query_address") then %><%= @dns_auth_query_address %><% else %><%= @dns_auth_ipaddress %><% end %>
 
-# Change this to the actual SOA name:
-default-soa-name=<%= @dns_auth_soa_name %>
+# dig SOA wmflabs.org
+# dig SOA eqiad.wmflabs
+default-soa-name=labs-ns0.wikimedia.org
 
 receiver-threads=8
 distributor-threads=4
