--- a/modules/labs_dns/templates/pdns.conf.erb
+++ b/modules/labs_dns/templates/pdns.conf.erb
@@ -12,7 +12,8 @@
 local-address=<%= @dns_auth_ipaddress %>
 query-local-address=<% if has_variable?("dns_auth_query_address") then %><%= @dns_auth_query_address %><% else %><%= @dns_auth_ipaddress %><% end %>
 
-# Change this to the actual SOA name:
+# dig SOA wmflabs.org
+# dig SOA eqiad.wmflabs
 default-soa-name=<%= @dns_auth_soa_name %>
 
 receiver-threads=8
