--- a/modules/dumps/templates/rsync/rsyncd.conf.pagecounts_ez.erb
+++ b/modules/dumps/templates/rsync/rsyncd.conf.pagecounts_ez.erb
@@ -3,12 +3,12 @@
 ### puppet:///modules/dumps/rsync/rsyncd.conf.pagecounts_ez
 #####################################################################
 
-# write access from stat100[4,5] to pagecounts-ez directory.
+# write access from <%= @hosts_allow %> to pagecounts-ez directory.
 # Erik Z uses this.  See T80444.
 [pagecounts-ez]
 uid = datasets
 gid = wikidev
 read only = false
 path = /data/xmldatadumps/public/other/pagecounts-ez
-hosts allow = stat1005.eqiad.wmnet stat1006.eqiad.wmnet
+hosts allow = <%= @hosts_allow %>
 
