move hardcoded refs to francium, dumps.wm.o out of dumps manifests to profiles
Change-Id: Iad2ee2040297702649fdeeae5392d22152cd6449

--- a/modules/dumps/templates/web/htmldumps/nginx.conf.erb
+++ b/modules/dumps/templates/web/htmldumps/nginx.conf.erb
@@ -7,7 +7,7 @@ limit_conn_zone $binary_remote_addr zone=addr:10m;
 
 server {
    listen 80;
-   server_name francium.eqiad.wmnet;
+   server_name <%= @htmldumps_server %>;
 
    root /srv/www;
 
