move most dataset1001 and ms1001 references from dumps modules to profile
There is still a python script to convert; it should take these as
arguments.

Bug: T175528
Change-Id: Id7b1996971f8567249c44e5817d33d94b6c1402f

--- a/modules/dumps/templates/rsync/rsyncd.conf.datasets_to_peers.erb
+++ b/modules/dumps/templates/rsync/rsyncd.conf.datasets_to_peers.erb
@@ -9,7 +9,7 @@ uid = root
 gid = root
 read only = false
 path = /data
-hosts allow = dataset1001.wikimedia.org, ms1001.wikimedia.org
+hosts allow = <%= @hosts_allow %>
 
 # slow-parse logs contain long render times for Wiki articles per server.
 # They are rsynced from MW log host to this directory.
