move hardcoded phab hostname out of rsync config for dataset hosts
Bug: T175528
Change-Id: I42644844a0add87f5bfa342336457e55ddea8bc6

--- a/modules/dumps/templates/rsync/rsyncd.conf.phab_dump.erb
+++ b/modules/dumps/templates/rsync/rsyncd.conf.phab_dump.erb
@@ -1,11 +1,11 @@
 #####################################################################
-### puppet:///modules/dumps/rsync/rsyncd.conf.phab_dump
+### puppet:///modules/dumps/rsync/rsyncd.conf.phab_dump.erb
 #####################################################################
 
-# write access from phab1001 to other/misc directory.
+# write access from <%= @hosts_allow %> to other/misc directory.
 [other_misc]
 uid = root
 gid = root
 read only = false
 path = /data/xmldatadumps/public/other/misc
-hosts allow = phab1001.eqiad.wmnet
+hosts allow = <%= @hosts_allow %>
