move hardcoded refs to labstore hosts from dump manifests to profile
Bug: T175528
Change-Id: I446b53e2a900adae84dac2858e70078b71aa8bfd

--- a/modules/dumps/templates/copying/labs-rsync-cron.sh.erb
+++ b/modules/dumps/templates/copying/labs-rsync-cron.sh.erb
@@ -1,10 +1,9 @@
 #!/bin/bash
 #########################################
 # This file is managed by puppet!
-# puppet:///modules/dumps/copying/labs-rsync-cron.sh
+# puppet:///modules/dumps/copying/labs-rsync-cron.sh.erb
 #########################################
 
-desthost="labstore1003.eqiad.wmnet"
 otherdir="/data/xmldatadumps/public/other"
 bwlimit="--bwlimit=50000"
 
@@ -18,10 +17,16 @@ do_rsync (){
     fi
 }
 
+if [ -z "$1" ]; then
+    echo "Usage: $0 hostname"
+    exit 1
+fi
 
-running=`pgrep -u root -f   "python /usr/local/bin/wmfdumpsmirror.py --dest_hostname labstore1003.eqiad.wmnet"`
+desthost="$1"
+
+running=`pgrep -u root -f   "python /usr/local/bin/wmfdumpsmirror.py --dest_hostname ${desthost}"`
 if [ -z "$running" ]; then
-    python /usr/local/bin/wmfdumpsmirror.py --dest_hostname labstore1003.eqiad.wmnet --sourcedir /data/xmldatadumps/public --destdir dumps/public --filesperjob 50 --sizeperjob 5G --workercount 1 --rsynclist rsync-filelist-last-3-good.txt.rsync --rsyncargs -rlptqgo,--bwlimit=50000
+    python /usr/local/bin/wmfdumpsmirror.py --dest_hostname ${desthost} --sourcedir /data/xmldatadumps/public --destdir dumps/public --filesperjob 50 --sizeperjob 5G --workercount 1 --rsynclist rsync-filelist-last-3-good.txt.rsync --rsyncargs -rlptqgo,--bwlimit=50000
 fi
 
 # fixme need to ensure ${desthost}::dumps/public/wikidatawiki/entities/ exists
