move hardcoded path to public dumps dir out of most dumps rsync manifests
Bug: T175528
Change-Id: I0b84bd4eaf53991d5854c22dac5466b1d0166f5f

--- a/modules/dumps/templates/copying/labs-rsync-cron.sh.erb
+++ b/modules/dumps/templates/copying/labs-rsync-cron.sh.erb
@@ -17,16 +17,17 @@ do_rsync (){
     fi
 }
 
-if [ -z "$1" ]; then
-    echo "Usage: $0 hostname"
+if [ -z "$1" -o -z "$2" ]; then
+    echo "Usage: $0 hostname sourcedir"
     exit 1
 fi
 
 desthost="$1"
+sourcedir="$2"
 
 running=`pgrep -u root -f   "python /usr/local/bin/wmfdumpsmirror.py --dest_hostname ${desthost}"`
 if [ -z "$running" ]; then
-    python /usr/local/bin/wmfdumpsmirror.py --dest_hostname ${desthost} --sourcedir /data/xmldatadumps/public --destdir dumps/public --filesperjob 50 --sizeperjob 5G --workercount 1 --rsynclist rsync-filelist-last-3-good.txt.rsync --rsyncargs -rlptqgo,--bwlimit=50000
+    python /usr/local/bin/wmfdumpsmirror.py --dest_hostname ${desthost} --sourcedir $sourcedir --destdir dumps/public --filesperjob 50 --sizeperjob 5G --workercount 1 --rsynclist rsync-filelist-last-3-good.txt.rsync --rsyncargs -rlptqgo,--bwlimit=50000
 fi
 
 # fixme need to ensure ${desthost}::dumps/public/wikidatawiki/entities/ exists
