--- a/modules/dumps/templates/web/xmldumps/nginx.conf.erb
+++ b/modules/dumps/templates/web/xmldumps/nginx.conf.erb
@@ -25,7 +25,7 @@ server {
 
    <%= @ssl_settings.join("\n   ") %>
 
-   root /data/xmldatadumps/public;
+   root <%= @publicdir %>;
 
    location / {
       index index.html index.htm;
