move most hardcoded paths for base dir of misc dumps out to profile
Bug: T175528
Change-Id: I51d7a447d20d37ad3355355449d45fc26a016d90

--- a/modules/dumps/templates/copying/labs-rsync-cron.sh.erb
+++ b/modules/dumps/templates/copying/labs-rsync-cron.sh.erb
@@ -10,20 +10,22 @@ bwlimit="--bwlimit=50000"
 do_rsync (){
     srcdir=$1
     destdir=$2
+    basedir=$3
 
-    running=`pgrep -u root -f -x "/usr/bin/rsync -rlptqgo $bwlimit ${otherdir}/${srcdir} ${desthost}::dumps/${destdir}"`
+    running=`pgrep -u root -f -x "/usr/bin/rsync -rlptqgo $bwlimit ${otherdir}/${srcdir} "${desthost}::dumps/${destdir}"`
     if [ -z "$running" ]; then
-        /usr/bin/rsync -rlptqgo "$bwlimit" "${otherdir}/${srcdir}" "${desthost}::dumps/${destdir}"
+        /usr/bin/rsync -rlptqgo "$bwlimit" "${basedir}/${srcdir}" "${desthost}::dumps/${destdir}"
     fi
 }
 
-if [ -z "$1" -o -z "$2" ]; then
-    echo "Usage: $0 hostname sourcedir"
+if [ -z "$1" -o -z "$2" -o -z "$3" ]; then
+    echo "Usage: $0 hostname sourcedir otherdumpsdir"
     exit 1
 fi
 
 desthost="$1"
 sourcedir="$2"
+otherdumpsdir="$3"
 
 running=`pgrep -u root -f   "python /usr/local/bin/wmfdumpsmirror.py --dest_hostname ${desthost}"`
 if [ -z "$running" ]; then
@@ -33,6 +35,6 @@ fi
 # fixme need to ensure ${desthost}::dumps/public/wikidatawiki/entities/ exists
 
 #copy from our dumps "other" directory to the labs host copy of dumps
-do_rsync "incr" ""
-do_rsync "wikibase/wikidatawiki/" "public/wikidatawiki/entities/"
-do_rsync "pageviews" ""
+do_rsync "incr" "" $otherdumspdir
+do_rsync "wikibase/wikidatawiki/" "public/wikidatawiki/entities/" $otherdumspdir
+do_rsync "pageviews" "" $otherdumspdir
