--- a/modules/dumps/templates/rsync/rsyncd.conf.media.erb
+++ b/modules/dumps/templates/rsync/rsyncd.conf.media.erb
@@ -9,6 +9,6 @@
 uid = datasets
 gid = wikidev
 read only = false
-path = /data/xmldatadumps/public/other/media
+path = <%= @otherdir %>/media
 hosts allow = <%= @hosts_allow %>
 
