--- a/modules/dumps/templates/rsync/rsyncd.conf.phab_dump.erb
+++ b/modules/dumps/templates/rsync/rsyncd.conf.phab_dump.erb
@@ -7,5 +7,5 @@
 uid = root
 gid = root
 read only = false
-path = /data/xmldatadumps/public/other/misc
+path = <%= @otherdir %>/misc
 hosts allow = <%= @hosts_allow %>
