--- a/modules/dumps/templates/rsync/rsyncd.conf.slowparse_logs.erb
+++ b/modules/dumps/templates/rsync/rsyncd.conf.slowparse_logs.erb
@@ -8,5 +8,5 @@
 uid = datasets
 gid = datasets
 read only = false
-path = /data/xmldatadumps/public/other/slow-parse
+path = <%= @otherdir %>/slow-parse
 hosts allow = <%= @hosts_allow %>
