--- a/modules/dumps/templates/rsync/rsyncd.conf.dumps_to_public.erb
+++ b/modules/dumps/templates/rsync/rsyncd.conf.dumps_to_public.erb
@@ -84,7 +84,7 @@ hosts allow = <%= @hosts_allow %>
 
 [dumpmirrorsother]
 read only = true
-path = /data/xmldatadumps/public/other
+path = <%= @otherdir %>
 exclude = **tmp/ **temp/ **bad/ **save/ **archive/
 hosts allow = <%= @hosts_allow %>
 
