--- a/modules/dumps/templates/rsync/rsyncd.conf.pagecounts_ez.erb
+++ b/modules/dumps/templates/rsync/rsyncd.conf.pagecounts_ez.erb
@@ -9,6 +9,6 @@
 uid = datasets
 gid = wikidev
 read only = false
-path = /data/xmldatadumps/public/other/pagecounts-ez
+path = <%= @otherdir %>/pagecounts-ez
 hosts allow = <%= @hosts_allow %>
 
