Enable basic ACL handling on the Kafka Jumbo cluster
Bug: T173493
Change-Id: I4c0f3f6ba5b34a08b6b0f4698b9b002a7dd6329f

--- a/modules/confluent/templates/kafka/server.properties.erb
+++ b/modules/confluent/templates/kafka/server.properties.erb
@@ -40,6 +40,11 @@ replica.fetch.max.bytes=<%= @replica_fetch_max_bytes %>
 <% end -%>
 <% end -%>
 
+<%if @authorizer_class_name -%>
+######################### ACL handling ##################################
+authorizer.class.name=<%= @authorizer_class_name %>
+<% end -%>
+
 ######################### Socket Server Settings ########################
 <% if @security_inter_broker_protocol -%>
 security.inter.broker.protocol=<%= @security_inter_broker_protocol %>
