--- a/modules/confluent/templates/kafka/log4j.properties.erb
+++ b/modules/confluent/templates/kafka/log4j.properties.erb
@@ -74,6 +74,12 @@ log4j.additivity.kafka.log.LogCleaner=false
 log4j.logger.state.change.logger=TRACE, stateChangeAppender
 log4j.additivity.state.change.logger=false
 
+<%if @authorizer_class_name -%>
+# authorizer.class.name set in server.properties, therefore a more verbose
+# log accounting is needed.
+log4j.logger.kafka.authorizer.logger=DEBUG, authorizerAppender
+<% else -%>
 #Change this to debug to get the actual audit log for authorizer.
 log4j.logger.kafka.authorizer.logger=WARN, authorizerAppender
+<% end -%>
 log4j.additivity.kafka.authorizer.logger=false
