--- a/modules/confluent/templates/kafka/server.properties.erb
+++ b/modules/confluent/templates/kafka/server.properties.erb
@@ -39,6 +39,10 @@ replica.fetch.max.bytes=<%= @message_max_bytes %>
 replica.fetch.max.bytes=<%= @replica_fetch_max_bytes %>
 <% end -%>
 <% end -%>
+<%if @authorizer_class_name -%>
+######################### ACL handling ##################################
+authorizer.class.name=<%= @authorizer_class_name %>
+<% end -%>
 
 ######################### Socket Server Settings ########################
 <% if @security_inter_broker_protocol -%>
