--- a/modules/gerrit/templates/gerrit.config.erb
+++ b/modules/gerrit/templates/gerrit.config.erb
@@ -79,7 +79,7 @@
     hostname = <%= @db_host %>
     database = <%= @db_name %>
     username = <%= @db_user %>
-    url = jdbc:mysql://<%= @db_host %>/<%= @db_name %>?characterSetResults=utf8&characterEncoding=utf8&connectionCollation=utf8_unicode_ci
+    url = jdbc:mysql://<%= @db_host %>/<%= @db_name %>?nullNamePatternMatchesAll=true&characterSetResults=utf8&characterEncoding=utf8&connectionCollation=utf8_unicode_ci
 [gerrit]
     basePath = <%= @git_dir %>
     canonicalWebUrl = <%= @url %>
