--- a/modules/releases/templates/apache-jenkins.conf.erb
+++ b/modules/releases/templates/apache-jenkins.conf.erb
@@ -1,3 +1,12 @@
+# run jenkins behind Apache and have pretty URLs / proxy port 80
+# https://wiki.jenkins-ci.org/display/JENKINS/Running+Jenkins+behind+Apache
+#
+# [*http_port*]
+# HTTP port for a Jenkins instance webservice. Example: 8080
+#
+# [*prefix*]
+# The HTTP path used to reach the Jenkins instance. Must have a leading slash.
+# Example: /ci
 <VirtualHost *:80>
     ServerName <%= @sitename_jenkins %>
     ServerAdmin <%= @server_admin %>
