--- a/modules/profile/templates/cumin/aliases.yaml.erb
+++ b/modules/profile/templates/cumin/aliases.yaml.erb
@@ -65,12 +65,15 @@ jobqueue-redis-codfw: (A:jobqueue-redis-master or A:jobqueue-redis-slave) and A:
 jobqueue-redis-eqiad: (A:jobqueue-redis-master or A:jobqueue-redis-slave) and A:eqiad
 jobqueue-redis-master: P{R:class = role::jobqueue_redis::master}
 jobqueue-redis-slave: P{R:class = role::jobqueue_redis::slave}
+kafka-all: A:kafka-analytics or A:kafka-main or A:kafka-jumbo-canary
 kafka-analytics: P{R:class = role::kafka::analytics::broker}
 kafka-analytics-canary: P{kafka1012.eqiad.wmnet}
 kafka-main: P{R:class = role::kafka::main::broker}
 kafka-main-canary: P{kafka2001.codfw.wmnet}
 kafka-main-codfw: A:kafka-main and A:codfw
 kafka-main-eqiad: A:kafka-main and A:eqiad
+kafka-jumbo-canary: P{kafka-jumbo1001.eqiad.wmnet}
+kafka-jumbo: P{R:class = role::kafka::jumbo::broker}
 kubernetes-etcd: P{R:class = role::etcd::kubernetes}
 kubernetes-masters: P{R:class = role::kubernetes::master}
 kubernetes-staging: P{R:class = role::kubernetes::staging::etcd or R:class = role::kubernetes::staging::master or R:class = role::kubernetes::staging::worker}
