Add library hints for libidn/libidn2
Change-Id: I902b946b4fb2387aef93d3ed9195b13cfd96971d

--- a/modules/profile/templates/debdeploy/debdeploy.erb
+++ b/modules/profile/templates/debdeploy/debdeploy.erb
@@ -9,6 +9,8 @@ file = libmagic
 freexl = libfreexl
 gnutls28 = libgnutls-openssl, libgnutls-deb0, libgnutls
 libgd2 = libgd
+libidn = libidn
+libidn2-0 = libidn2
 libonig = libonig
 libxml2 = libxml2
 openssl = libssl, libcrypto
