--- a/modules/profile/templates/debdeploy/debdeploy.erb
+++ b/modules/profile/templates/debdeploy/debdeploy.erb
@@ -7,6 +7,7 @@ stretch = debian, 9
 [libraries]
 file = libmagic
 freexl = libfreexl
+ghostscript = libgs
 gnutls28 = libgnutls-openssl, libgnutls-deb0, libgnutls
 libgd2 = libgd
 libidn = libidn
